<resources>
    <string name="app_name">CardGame</string>
    <string name="home">Главная</string>
    <string name="battle">Бой</string>
    <string name="grow">Рост</string>
    <string name="shop">Магазин</string>
    <string name="more">Больше</string>
    <string name="bag">Сумка</string>
    <string name="ninja_village">Деревня ниндзя</string>
    <string name="journey">Путешествие</string>
    <string name="tailed_beast">Хвостатый зверь</string>
    <string name="chat">Чат</string>
    <string name="character">Персонаж</string>
    <string name="helmet">Шлем</string>
    <string name="chestplate">Нагрудник</string>
    <string name="leggings">Поножи</string>
    <string name="boots">Сапоги</string>
    <string name="bracers">Наручи</string>
    <string name="accessory">Аксессуар</string>
    <string name="weapon">Оружие</string>
    <string name="additional_weapon">Дополнительное оружие</string>
    <string name="register">Регистрация</string>
    <string name="ok">ОК</string>
    <string name="name_already_used">Данное имя уже используется</string>
    <string name="inventory_item">Предмет инвенторя</string>
    <string name="are_you_sure_about_delete_this_item">Вы действительно хотите удалить предмет?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>