<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/battle"
        android:icon="@drawable/ic_baseline_accessible_forward_24"
        android:title="@string/battle" />
    <item
        android:id="@+id/grow"
        android:icon="@drawable/ic_baseline_arrow_circle_up_24"
        android:title="@string/grow" />
    <item
        android:id="@+id/shop"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/shop" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/more" />
</menu>