<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/character_background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/helmet"
        style="@style/EquipmentCard"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_helmet"
            android:contentDescription="@string/helmet" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chestplate"
        style="@style/EquipmentCard"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helmet">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_chestplate"
            android:contentDescription="@string/chestplate" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/leggings"
        style="@style/EquipmentCard"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chestplate">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_leggings"
            android:contentDescription="@string/leggings" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/boots"
        style="@style/EquipmentCard"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leggings">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_boots"
            android:contentDescription="@string/boots" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bracers"
        style="@style/EquipmentCard"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_bracers"
            android:contentDescription="@string/bracers" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/accessory"
        style="@style/EquipmentCard"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bracers">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_accessory"
            android:contentDescription="@string/accessory" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/weapon"
        style="@style/EquipmentCard"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accessory">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_weapon"
            android:contentDescription="@string/weapon" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/additional_weapon"
        style="@style/EquipmentCard"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weapon">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_additional_weapon"
            android:contentDescription="@string/additional_weapon" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_man_24"
        app:layout_constraintBottom_toBottomOf="@+id/boots"
        app:layout_constraintEnd_toStartOf="@+id/bracers"
        app:layout_constraintStart_toEndOf="@+id/helmet"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/character" />

</androidx.constraintlayout.widget.ConstraintLayout>